force-app/main/default/objects/DistributionCenter__c/DistributionCenter__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena os registros de Centros de Distribuição provenientes do SAP, alimentado através de carga de dados.</description>
    
    <label>Centro de Distribuição</label>
    <nameField>
        <label>Nome de Centro de Distribuição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centros de Distribuição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>