force-app/main/default/objects/DistributionCenter__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica se o centro de distribuição esta ativo ou não.</description>
    <inlineHelpText>Campo que indica se o centro de distribuição esta ativo ou não.</inlineHelpText>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>