force-app/main/default/objects/DistributionCenter__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Centros de Distribuição</relationshipLabel>
    <relationshipName>DistributionCenters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>