force-app/main/default/objects/DistributionCenter__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Descrição do centro de distribuição</description>
    <inlineHelpText>Descrição do centro de distribuição</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>