force-app/main/default/objects/DistributionCenter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>Active__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>